--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Content/PlayerSheet/PlayerSheet.css
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Content/PlayerSheet/PlayerSheet.css
@@ -3,49 +3,109 @@
     margin-left: 50px;
 }
 
-.player-sheet-detail {
+.player-sheet-header {
+    width: 99.5%;
+}
+
+.player-sheet-header, .player-sheet-detail {
     background-color: #f6f8f9;
-    margin: 5px;
+    margin: 2px;
     margin-right: 0;
-    max-height: 250px;
     border: 3px solid #a7cfdf;
     padding: 0;
     display: inline-block;
+    vertical-align: top;
 }
 
-    .player-sheet-detail p {
-        display: block;
-        width: 100%;
-        padding: 5px;
-        padding-left: 25px;
-        margin: 0;
-        text-align: left;
-        
-        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a7cfdf+0,23538a+100;Blue+3d+%238 */
-        background: #a7cfdf; /* Old browsers */
-        background: -moz-linear-gradient(top, #a7cfdf 0%, #23538a 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(top, #a7cfdf 0%,#23538a 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to bottom, #a7cfdf 0%,#23538a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7cfdf', endColorstr='#23538a',GradientType=0 ); /* IE6-9 */
-        color: white;
-    }
+.player-sheet-detail {
+    width: 32.8%;
+}
 
-    .player-sheet-detail > div {
-        padding: 15px;
-    }
+.player-sheet-header table {
+    margin-bottom: 0;
+}
+
+.player-sheet-header p, .player-sheet-detail p {
+    display: block;
+    width: 100%;
+    padding: 4px;
+    padding-left: 25px;
+    margin: 0;
+    text-align: left;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a7cfdf+0,23538a+100;Blue+3d+%238 */
+    background: #a7cfdf; /* Old browsers */
+    background: -moz-linear-gradient(top, #a7cfdf 0%, #23538a 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #a7cfdf 0%,#23538a 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #a7cfdf 0%,#23538a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7cfdf', endColorstr='#23538a',GradientType=0 ); /* IE6-9 */
+    color: white;
+}
+
+.player-sheet-header > div, .player-sheet-detail > div {
+    padding: 15px;
+}
+
+#TableAttribute_1_filter > label > input,
+#TableAttribute_2_filter > label > input,
+#TableTalents_filter > label > input,
+#TableMagics_1_filter > label > input,
+#TableItems_1_filter > label > input ,
+#TableMagics_2_filter > label > input,
+#TableItems_2_filter > label > input
+{
+    display: inline-block;
+    max-width: 75px;
+    font-size: smaller;
+}
+
+#TableAttribute_1_filter > label,
+#TableAttribute_2_filter > label,
+#TableTalents_filter > label,
+#TableMagics_1_filter > label,
+#TableItems_1_filter > label,
+#TableMagics_2_filter > label,
+#TableItems_2_filter > label  
+{
+    display: flex;
+    font-size: small;
+}
+
+#TableAttribute_1_wrapper > div.row,
+#TableAttribute_2_wrapper > div.row,
+#TableTalents_wrapper > div.row,
+#TableMagics_1_wrapper > div.row,
+#TableItems_1_wrapper > div.row,
+#TableMagics_2_wrapper > div.row,
+#TableItems_2_wrapper > div.row
+ {
+    display: flex;
+    font-size: smaller;
+}
+
+#TableAttribute_1_wrapper > div.row a,
+#TableAttribute_2_wrapper > div.row a,
+#TableTalents_wrapper > div.row a,
+#TableMagics_1_wrapper > div.row a,
+#TableItems_1_wrapper > div.row a,
+#TableMagics_2_wrapper > div.row a,
+#TableItems_2_wrapper > div.row a
+ {
+    font-size: smaller;
+}
+
+
+
+.minimizeBox {
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.closeBox {
+    cursor: pointer;
+}
 
 .font-bold {
     font-weight: bold;
-}
-
-.div-attribute-container, .div-talents-container {
-    height: 300px;
-    overflow-y: auto;
-}
-
-.div-items-container {
-    height: 400px;
-    overflow-y: auto;
 }
 
 .table tbody tr td input {
@@ -63,23 +123,25 @@
 }
 
 .health-bar {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 200px;
-  height: 20px;
-  padding: 5px;
-  background: #ddd;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  position: relative;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100px;
+    height: 20px;
+    padding: 5px;
+    background: #ddd;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    position: relative;
+    margin-left: 5px;
 }
+
 .bar {
     background: #c54;
-  width: 100%;
-  height: 10px;
-  position: relative;
+    width: 100%;
+    height: 10px;
+    position: relative;
     -webkit-transition: width .5s linear;
     -moz-transition: width .5s linear;
     -ms-transition: width .5s linear;
@@ -88,15 +150,23 @@
 }
 
 .hit {
-  background: rgba(255,255,255,0.6);
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 0px;
-   -webkit-transition: width .5s linear;
+    background: rgba(255,255,255,0.6);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 0px;
+    -webkit-transition: width .5s linear;
     -moz-transition: width .5s linear;
     -ms-transition: width .5s linear;
     -o-transition: width .5s linear;
-  transition: width .5s linear;
+    transition: width .5s linear;
+}
+
+.borderless td, .borderless th {
+    border: none !important;
+}
+
+.fixedElement {
+    z-index:100;
 }
