--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Content/Sprites/sprite_playersheet.css
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Content/Sprites/sprite_playersheet.css
@@ -16,62 +16,104 @@
     background-position: -59px -3px;
 }
 
+.sprite-playersheet-Catapult-Firing-Filled {
+    width: 50px;
+    height: 50px;
+    background-position: -115px -3px;
+}
+
 .sprite-playersheet-FAQ-48 {
     width: 48px;
     height: 48px;
-    background-position: -115px -3px;
+    background-position: -171px -3px;
 }
 
 .sprite-playersheet-Hint-48 {
     width: 48px;
     height: 48px;
-    background-position: -115px -57px;
+    background-position: -171px -57px;
+}
+
+.sprite-playersheet-Kicking-50 {
+    width: 50px;
+    height: 50px;
+    background-position: -3px -111px;
+}
+
+.sprite-playersheet-Knight-Shield-50 {
+    width: 50px;
+    height: 50px;
+    background-position: -59px -111px;
+}
+
+.sprite-playersheet-Magic {
+    width: 48px;
+    height: 48px;
+    background-position: -115px -111px;
+}
+
+.sprite-playersheet-Medal {
+    width: 50px;
+    height: 50px;
+    background-position: -169px -111px;
+}
+
+.sprite-playersheet-Talent {
+    width: 50px;
+    height: 50px;
+    background-position: -3px -167px;
 }
 
 .sprite-playersheet-Talk {
     width: 48px;
     height: 48px;
-    background-position: -3px -111px;
+    background-position: -59px -167px;
+}
+
+.sprite-playersheet-Treasure-Map {
+    width: 50px;
+    height: 50px;
+    background-position: -113px -167px;
 }
 
 .sprite-playersheet-Viking-Ship {
     width: 48px;
     height: 48px;
-    background-position: -57px -111px;
+    background-position: -169px -167px;
 }
 
 .sprite-playersheet-Wizard-48 {
     width: 48px;
     height: 48px;
-    background-position: -111px -111px;
+    background-position: -225px -3px;
 }
 
 .sprite-playersheet-deca-dice {
     width: 50px;
     height: 50px;
-    background-position: -169px -3px;
+    background-position: -225px -57px;
 }
 
 .sprite-playersheet-octa-dice {
     width: 48px;
     height: 48px;
-    background-position: -169px -59px;
+    background-position: -225px -113px;
 }
 
 .sprite-playersheet-six-dice {
     width: 48px;
     height: 48px;
-    background-position: -165px -113px;
+    background-position: -223px -167px;
 }
 
 .sprite-playersheet-ten-dice {
     width: 48px;
     height: 48px;
-    background-position: -3px -167px;
+    background-position: -59px -221px;
 }
 
 .sprite-playersheet-twenty-dice {
     width: 48px;
     height: 48px;
-    background-position: -57px -167px;
+    background-position: -169px -221px;
 }
