--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_PlayerSheetTalents.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_PlayerSheetTalents.cshtml
@@ -2,24 +2,21 @@
 
 @if (Model.ToList().Count > 0)
 {
-    <div class="div-items-container">
-        <h4 class="text-center"><strong>&nbsp;</strong></h4>
-        <table class="table table-responsive mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-            <thead>
-                <tr>
-                    <th class="small text-center">
-                        <i class="fa fa-star"></i>&nbsp;&nbsp;@Html.DisplayFor(m => Model.FirstOrDefault().AttributeType)
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.OrderBy(o => o.AttributeName).ToList())
+    <table class="table table-responsive table-bordered" id="TableTalents">
+        <thead>
+            <tr>
+                <th class="small text-center">
+                    <i class="fa fa-star"></i>&nbsp;&nbsp;@Html.DisplayFor(m => Model.FirstOrDefault().AttributeType)
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.OrderBy(o => o.AttributeName).ToList())
                 {
-                    <tr>
-                        <td class="small">@Html.DisplayFor(m => item.AttributeName)</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+                <tr>
+                    <td class="small">@Html.DisplayFor(m => item.AttributeName)</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
